Displaying conversation in a descending chronological order (#25)
* Implementing a descending order view of the message list

* Moved the option under the reading section in preferences and changed the wording of the option

* Forgot to update .gitignore

--- a/app/internal_packages/message-list/styles/message-list.less
+++ b/app/internal_packages/message-list/styles/message-list.less
@@ -504,7 +504,7 @@ body.platform-win32 {
     overflow: hidden;
 
     max-width: @message-max-width;
-    margin: -3px auto 0 auto;
+    margin: -3px auto 10px auto;
 
     position: relative;
     z-index: 2;
