Rename the nylas: URL scheme to merani:

--- a/app/internal_packages/notifications/styles/styles.less
+++ b/app/internal_packages/notifications/styles/styles.less
@@ -53,7 +53,7 @@
 
 .notification .subtitle.has-action::after {
   content:'';
-  background: url(nylas://notifications/assets/minichevron@2x.png) top left no-repeat;
+  background: url(merani://notifications/assets/minichevron@2x.png) top left no-repeat;
   background-size: 4.5px 7px;
   margin-left:3px;
   display: inline-block;
