--- a/app/internal_packages/screenshot-mode/assets/font-override.css
+++ b/app/internal_packages/screenshot-mode/assets/font-override.css
@@ -2,33 +2,33 @@
   font-family: 'Nylas-Pro';
   font-style: normal;
   font-weight: 200;
-  src: url('nylas://screenshot-mode/assets/BLOKKNeue-Regular.otf');
+  src: url('merani://screenshot-mode/assets/BLOKKNeue-Regular.otf');
 }
 
 @font-face {
   font-family: 'Nylas-Pro';
   font-style: normal;
   font-weight: 300;
-  src: url('nylas://screenshot-mode/assets/BLOKKNeue-Regular.otf');
+  src: url('merani://screenshot-mode/assets/BLOKKNeue-Regular.otf');
 }
 
 @font-face {
   font-family: 'Nylas-Pro';
   font-style: normal;
   font-weight: 400;
-  src: url('nylas://screenshot-mode/assets/BLOKKNeue-Regular.otf');
+  src: url('merani://screenshot-mode/assets/BLOKKNeue-Regular.otf');
 }
 
 @font-face {
   font-family: 'Nylas-Pro';
   font-style: normal;
   font-weight: 500;
-  src: url('nylas://screenshot-mode/assets/BLOKKNeue-Regular.otf');
+  src: url('merani://screenshot-mode/assets/BLOKKNeue-Regular.otf');
 }
 
 @font-face {
   font-family: 'Nylas-Pro';
   font-style: normal;
   font-weight: 600;
-  src: url('nylas://screenshot-mode/assets/BLOKKNeue-Regular.otf');
+  src: url('merani://screenshot-mode/assets/BLOKKNeue-Regular.otf');
 }
