--- a/app/static/email-frame.less
+++ b/app/static/email-frame.less
@@ -7,35 +7,35 @@
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 200;
-    src: url('nylas://custom-fonts/fonts/Custom-Thin.otf');
+    src: url('merani://custom-fonts/fonts/Custom-Thin.otf');
   }
 
   @font-face {
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 300;
-    src: url('nylas://custom-fonts/fonts/Custom-Blond.otf');
+    src: url('merani://custom-fonts/fonts/Custom-Blond.otf');
   }
 
   @font-face {
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 400;
-    src: url('nylas://custom-fonts/fonts/Custom-Normal.otf');
+    src: url('merani://custom-fonts/fonts/Custom-Normal.otf');
   }
 
   @font-face {
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 500;
-    src: url('nylas://custom-fonts/fonts/Custom-Medium.otf');
+    src: url('merani://custom-fonts/fonts/Custom-Medium.otf');
   }
 
   @font-face {
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 600;
-    src: url('nylas://custom-fonts/fonts/Custom-SemiBold.otf');
+    src: url('merani://custom-fonts/fonts/Custom-SemiBold.otf');
   }
 
   // Pro-SemiBold doesn't render emoji properly. Override the emjoi unicode
@@ -44,7 +44,7 @@
     font-family: 'Nylas-Pro';
     font-style: normal;
     font-weight: 600;
-    src: url('nylas://custom-fonts/fonts/Custom-Normal.otf'), Helvetica, sans-serif;
+    src: url('merani://custom-fonts/fonts/Custom-Normal.otf'), Helvetica, sans-serif;
     unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
   }
 
