Fix misc attachment styling / changed Chrome APIs

--- a/app/internal_packages/composer/styles/composer.less
+++ b/app/internal_packages/composer/styles/composer.less
@@ -75,7 +75,7 @@ body.platform-win32 {
 
     .nylas-attachment-item.image-attachment-item {
       margin: 0;
-      max-width: 100%;
+      max-width: calc(100% - 22px); // right margin of composer
       min-width: 0;
     }
   }
