Implement send later, send reminders locally

--- a/app/internal_packages/send-reminders/styles/send-reminders.less
+++ b/app/internal_packages/send-reminders/styles/send-reminders.less
@@ -1,5 +1,5 @@
 @import "ui-variables";
-@reminders-background-color: #f6f6fe;
+@reminders-background-color: #f2efff;
 @reminders-color: #5a31e1;
 
 .send-reminders-popover {
