--- a/app/static/components/feature-used-up-modal.less
+++ b/app/static/components/feature-used-up-modal.less
@@ -19,7 +19,7 @@
     margin-bottom: 11px;
   }
   .recharge-text {
-    margin: 0;
+    margin: 0 30px;
     opacity: 0.67;
   }
   .feature-cta {
@@ -33,9 +33,7 @@
   .pro-description {
     width: 275px;
     margin: 0 auto;
-    padding-bottom: 28px;
-    border-top: 1px solid rgba(0,0,0,0.1);
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    padding-left: 0;
 
     ul {
       color: rgba(51, 51, 51, 0.67);
@@ -58,13 +56,13 @@
       color: rgba(51, 51, 51, 0.67);
       margin: 0;
       text-align: left;
-      padding-left: 62px;
+      padding-left: 22px;
       line-height: 24px;
     }
   }
 
   .btn {
     margin-top: 21px;
-    padding: 0 33px 25px 33px;
+    width: 200px;
   }
 }
